# YadroTest_kvadraOS_4

./: CMakeLists.txt  Readme.md  config,h  config.cpp  config.h  config.json  main.cpp  parser.cpp  parser.h  periodic.cpp  periodic.h  resolver.h  scanner.cpp  scanner.h  server.cpp  server.h
